--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Drink Water</h1>
+	<h3>Goal : 2 Litres</h3>
+	<div class="cup">
+		<div class="remained" id="remained">
+			<span id="liters"></span>
+			<small>Remained</small>
+		</div>
+		<div class="percentage" id="percentage"></div>
+	</div>
+
+	<p class="text">Select how many glasses of water that you have drank</p>
+
+	<div class="cups">
+		<div class="cup cup-small" id="cup-1">250 ml</div>
+		<div class="cup cup-small" id="cup-2">250 ml</div>
+		<div class="cup cup-small" id="cup-3">250 ml</div>
+		<div class="cup cup-small" id="cup-4">250 ml</div>
+		<div class="cup cup-small" id="cup-5">250 ml</div>
+		<div class="cup cup-small" id="cup-6">250 ml</div>
+		<div class="cup cup-small" id="cup-7">250 ml</div>
+		<div class="cup cup-small" id="cup-8">250 ml</div>
+	</div>
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
